--- a/KosaESS/src/main/resources/static/css/admin/class_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/class_list.css
@@ -131,6 +131,7 @@
 
 .content_list {
 	width: 100%;
+	overflow-x : scroll;
 	background: #ffffff;
 	border-radius: 3px;
 	margin-top:10px;
@@ -138,7 +139,7 @@
 }
 
 .content_list .content_list_table {
-	width: 100%;
+	width: 150%;
 	border-collapse: collapse;
 	border-spacing: 0;
 }
@@ -175,5 +176,12 @@
 }
 
 
+.class_check, .class_num, .class_id, .class_status, .set_tm, .manager_name, .aply_dt, .class_dt{
+	text-align:center;
+}
+
+.limit_cnt {
+	text-align:right;
+}
 
 
