--- a/KosaESS/src/main/resources/templates/admin/inquiry_form.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_form.html
@@ -41,7 +41,8 @@
 				<tr th:if="${act=='select'}">
 					<th>등록자</th>
 					<td>
-						<div th:text="${postVO.rgsterId}"></div>
+						<div th:if="${postVO.stdtNm}" th:text="${postVO.stdtNm}"></div>
+						<div th:if="${postVO.mngrNm}" th:text="${postVO.mngrNm}"></div>
 					</td>
 				</tr>
 				<tr>
@@ -77,7 +78,11 @@
 				<!-- 답변 있으면 div로 / 없으면 input으로 -->
 				<div class="reply_wrap">
 					<div class="reply" th:each="reply: ${replyList}">
-						<div class="reply_date" th:text="${reply.rgstDt}"></div>
+						<div style="display:flex;">
+							<input type="hidden" th:value="${reply.postId}">
+							<div  class="reply_date" th:text="${reply.rgstDt}"></div>
+							<button class="x_btn" type="button" onclick="deleteReply(this)"><img th:src="@{/img/x_white.png}"></button>
+						</div>
 						<div class="reply_title" th:text="${reply.postTitle}"></div>
 						<div class="reply_content" th:text="${reply.postContent}"></div>
 					</div>
@@ -93,7 +98,7 @@
 							<tr>
 								<td style="width: 200px;background: #F3F6F8; text-align:center;"><div style="font-weight: bold;">답변 내용</div></td>
 								<td><input name="replyContent" class="reply_input"
-									type="text" style="width: 90%;"></td>
+									type="text" style="width: 100%;"></td>
 							</tr>
 						</table>
 						<button class="reply_btn">등록하기</button>
@@ -125,7 +130,7 @@
 	<!-- Content Wrap -->
 
 	<script>
-		//삭제
+		//문의글삭제
 		document.querySelector("#delete_btn").addEventListener(
 						"click",
 						function() {
@@ -152,7 +157,32 @@
 											}
 										}
 									});
-						});
+		});
+		
+		//답변삭제
+		function deleteReply(button){
+			var divParent = button.closest("div");
+			//답변의 postId값
+			var replyId = divParent.querySelector('input[type="hidden"]').value;
+			
+			//문의사항 postId값
+			var inquiryId = document.querySelector('.inquiry_id').value;
+			
+			//Ajax 요청으로 replyId값을 전달하여 delete_yn을 업데이트 한다.
+			$.ajax({
+				url : '/admin/inquiry/reply/delete/'+replyId,
+				method : 'POST',
+				data : {
+				},
+				success : function(response) {
+					console.log(response);
+					if (response == "success") {
+						alert("답변이 삭제되었습니다.");
+						window.location.href = "/admin/inquiry/view/"+inquiryId;
+					}
+				}
+			});
+		}
 	</script>
 </body>
 </html>
