--- a/KosaESS/src/main/resources/templates/admin/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_list.html
@@ -78,8 +78,8 @@
 			<!-- 컨텐츠 개수와 버튼 wrap -->
 			<div class="content_info_wrap">
 				<div class="content_info">
-					<span>총 게시물 <span class="class_list_cnt"
-						th:text="${#lists.size(inquiryList)}">classListCnt</span>건
+					<span>총 게시물 <span class="inquiry_list_cnt"
+						th:text="${#lists.size(inquiryList)}"></span>건
 					</span>
 				</div>
 				<div class="content_info_btn_wrap">
@@ -99,10 +99,10 @@
 							<th style="width: 3%;"><input type="checkbox"
 								name="select_all" onclick="selectAll(this)"></th>
 							<th style="width: 5%;">번호</th>
-							<th style="width: 52%;">제목</th>
+							<th style="width: 62%;">제목</th>
 							<th style="width: 5%;">첨부파일</th>
 							<th style="width: 5%;">작성자</th>
-							<th style="width: 20%;">등록일시</th>
+							<th style="width: 10%;">등록일시</th>
 							<th style="width: 5%;">조회수</th>
 							<th style="width: 5%;">답변상태</th>
 						</tr>
@@ -124,7 +124,7 @@
 								th:if="${inquiry.mngrNm == null}" th:text="${inquiry.stdtNm}"></span>
 								<span th:if="${inquiry.stdtNm == null}"
 								th:text="${inquiry.mngrNm}"></span></td>
-							<td th:text="${inquiry.rgstDt}"></td>
+							<td class="rgst_dd" th:text="${#dates.format(inquiry.rgstDt, 'yyyy-MM-dd')}"></td>
 							<td class="inquiry_hit" th:text="${inquiry.postHit}"></td>
 							<td class="inquiry_status" th:text="${inquiry.cmcdNm}"></td>
 						</tr>
@@ -248,6 +248,10 @@
 							success : function(response) {
 								console.log("성공");
 								var inquiryList = response.inquiryList;
+								
+								//건수 초기화
+								var cnt = document.querySelector(".inquiry_list_cnt");
+								cnt.innerHTML = inquiryList.length;
 
 								// tbody 요소 찾기
 								var tbody = document.querySelector("tbody");
@@ -321,6 +325,7 @@
 
 									//rgstDt
 									var tdRgstDt = document.createElement("td");
+									tdRgstDt.className = "rgst_dd";
 									tdRgstDt.textContent = formatTimestamp(inquiry.rgstDt);
 									tr.appendChild(tdRgstDt);
 
@@ -356,7 +361,7 @@
 			const seconds = String(date.getSeconds()).padStart(2, '0');
 			const milliseconds = date.getMilliseconds();
 
-			const formattedTimestamp = `${year}-${month}-${day} ${hours}:${minutes}:${seconds}:${milliseconds}`;
+			const formattedTimestamp = `${year}-${month}-${day}`;
 
 			return formattedTimestamp;
 		}
