--- a/KosaESS/src/main/resources/templates/admin/notice_list.html
+++ b/KosaESS/src/main/resources/templates/admin/notice_list.html
@@ -45,7 +45,7 @@
 
 				<!-- 공지사항 상태 -->
 				<div class="filter_box">
-					<div class="filter_box_title">공지사항상태</div>
+					<div class="filter_box_title">게시상태</div>
 					<div>
 						<select class="search_input_status">
 							<option value="all" th:text="전체">전체</option>
@@ -98,17 +98,20 @@
 
 			<!-- 컨텐츠 리스트 부분 -->
 			<div class="content_list">
-				<table class="content_list_table">
+				<div th:if="${#lists.size(noticeList)==0}" style="text-align:center;">
+					조회 결과가 없습니다.
+				</div>
+				<table class="content_list_table" th:if="${#lists.size(noticeList)>0}">
 					<thead>
 						<tr class="content_list_th">
 							<th style="width: 3%;">
 								<input type="checkbox" name="select_all" onclick="selectAll(this)">
 							</th>
 							<th style="width: 5%;">번호</th>
-							<th style="width: 52%;">제목</th>
+							<th style="width: 62%;">제목</th>
 							<th style="width: 5%;">첨부파일</th>
 							<th style="width: 5%;">작성자</th>
-							<th style="width: 20%;">등록일시</th>
+							<th style="width: 10%;">등록일자</th>
 							<th style="width: 5%;">조회수</th>
 							<th style="width: 5%;">게시상태</th>
 						</tr>
@@ -123,7 +126,7 @@
 							<td class="notice_file"><img th:if="${notice.fileId!=null}"
 								class="file_img" th:src="@{/img/file.png}"></td>
 							<td class="mngr_nm" th:text="${notice.mngrNm}"></td>
-							<td th:text="${notice.rgstDt}"></td>
+							<td class="rgst_dd" th:text="${#dates.format(notice.rgstDt, 'yyyy-MM-dd')}"></td>
 							<td class="notice_hit" th:text="${notice.postHit}"></td>
 							<td class="notice_status" th:text="${notice.cmcdNm}"></td>
 						</tr>
@@ -245,6 +248,11 @@
 					success : function(response) {
 						console.log("성공");
 						var noticeList = response.noticeList;
+						
+						
+						//건수 초기화
+						var cnt = document.querySelector(".notice_list_cnt");
+						cnt.innerHTML = noticeList.length;
 
 						// tbody 요소 찾기
 						var tbody = document.querySelector("tbody");
@@ -311,6 +319,7 @@
 							
 							//rgstDt
 							var tdRgstDt = document.createElement("td");
+							tdRgstDt.className = "rgst_dd";
 							tdRgstDt.textContent = formatTimestamp(notice.rgstDt);
 							tr.appendChild(tdRgstDt);
 							
@@ -346,7 +355,7 @@
 			   const seconds = String(date.getSeconds()).padStart(2, '0');
 			   const milliseconds = date.getMilliseconds();
 
-			   const formattedTimestamp = `${year}-${month}-${day} ${hours}:${minutes}:${seconds}:${milliseconds}`;
+			   const formattedTimestamp = `${year}-${month}-${day}`;
 
 			   return formattedTimestamp;
 		}
